# F1Chatter

./: .flake8  .gitignore  README.md  app.py  env_template.txt  gradio_app.py  notebook.ipynb  pyproject.toml  requirements.txt  run_agent.py  run_web.py  test_gemini.py
.github/workflows/: sync-to-huggingface.yml
application/: __init__.py  main.py  main_openai.py
crud/: __init__.py  f1_data_types.py  f1_getters.py
